apps/base/solidtime/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: solidtime-app
  namespace: app-solidtime
spec:
  replicas: 1
  selector:
    matchLabels:
      app: solidtime
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: solidtime
    spec:
      containers:
        - name: app
          image: solidtime/solidtime:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: app-storage
              mountPath: /var/www/html/storage
        - name: scheduler
          image: solidtime/solidtime:latest
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: app-storage
              mountPath: /var/www/html/storage
        - name: queue
          image: solidtime/solidtime:latest
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: app-storage
              mountPath: /var/www/html/storage
      volumes:
        - name: app-storage
          persistentVolumeClaim:
            claimName: app-storage-pvc
