apps/base/solidtime/ingressroute.yaml
apiVersion: v1
kind: Service
metadata:
  name: solidtime
  namespace: app-solidtime

spec:
  ports:
    - name: tcp
      port: 8000
  selector:
    app: solidtime
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: solidtime
  namespace: app-solidtime

spec:
  entryPoints:
    - web
  routes:
    - match: HostRegexp(`^solidtime\..*`)
      kind: Rule
      services:
        - name: solidtime
          port: 8000
